fixed tax rules for different contries
